gettext-macros/tests/ui/dgettext/requires_at_least.rs
use gettext_macros::*;

fn main() {
    dgettext!();
}
